fix: improve responsive design for small screen heights and ensure SVG visibility on Safari
- Adjust CSS for app, header, profile banner, about me intro, and contact card components to enhance responsiveness on small screen heights.
- Fix SVG visibility issue on Safari by modifying profile banner logic and CSS.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,7 +39,7 @@ main {
     width: $menu-size;
   }
 }
-@media (max-width: 1024px) {
+@media (max-width: 1024px), (max-height: 489px) {
   main {
     margin-left: 0px;
   }
