--- a/src/app/layout/profile-banner/profile-banner.component.scss
+++ b/src/app/layout/profile-banner/profile-banner.component.scss
@@ -100,7 +100,11 @@ footer {
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1024px), (max-height: 489px) {
+  :host {
+    max-height: 100vh;
+    overflow: auto;
+  }
   .social {
     gap: 30px;
     margin-top: 50px;
