--- a/src/app/pages/contact/components/contact-card/contact-card.component.scss
+++ b/src/app/pages/contact/components/contact-card/contact-card.component.scss
@@ -83,4 +83,12 @@ a {
   height: 100%;
 
   background: var(--color-accent);
+
+}
+
+:host ::ng-deep {
+  .icon svg {
+    width: 100%;
+    height: 100%;
+  }
 }
